<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaysActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/fondoblanco" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:layout_marginRight="20sp"
        android:layout_marginLeft="20sp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="10sp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewiconPay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="center"
                app:srcCompat="@drawable/iconpay" />


        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvHomeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/payTitle"
            android:inputType="text"
            android:textSize="14sp" />
        <RadioGroup
            android:id="@+id/rgTypeInvoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.radiobutton.MaterialRadioButton

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rbCens"
                android:text="@string/cens"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rbAguasK"
                android:text="@string/aguask"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rbVeolia"
                android:text="@string/veolia"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rbDirectv"
                android:text="@string/directv"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rbCanalE"
                android:text="@string/canalE"/>

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pay_number_invoice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/numberInvoice"
                android:inputType="number" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/deposit_text_amount"
                android:hint="@string/textamount"
                android:textSize="14sp"
                android:gravity="center"
                android:inputType="text" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pay_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/amountPay"
                android:inputType="number" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pay_confirm_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirmamount"
                android:inputType="number" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/pay_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:text="@string/pay" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>