<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DepositsActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/fondoblanco" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50sp"
        android:layout_marginBottom="50sp"
        android:layout_marginRight="20sp"
        android:layout_marginLeft="20sp"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/depositTitle"
            android:hint="@string/depositsTitle"
            android:textSize="25sp"
            android:gravity="center"
            android:inputType="text" />

        <ImageView
            android:id="@+id/imageViewicondeposit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:scaleType="center"
            app:srcCompat="@drawable/deposit" />

        <LinearLayout
            android:layout_width="320sp"
            android:layout_height="300sp"
            android:gravity="center_horizontal"
            android:layout_marginTop="30sp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="30sp"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/deposit_text_amount"
                    android:hint="@string/textamount"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:inputType="text" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/deposit_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/amount"
                    android:inputType="number" />
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/deposit_confirm_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirmamount"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/deposit_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:text="@string/deposit" />
            </LinearLayout>

        </LinearLayout>



    </LinearLayout>


</RelativeLayout>