<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PopDetails">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/fondoblanco" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50sp"
        android:layout_marginBottom="50sp"
        android:layout_marginRight="20sp"
        android:layout_marginLeft="20sp"
        android:gravity="center"
        android:orientation="vertical">



        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvHomeTitle"
            android:hint="@string/popDetailsTitle"
            android:textSize="18sp"
            android:gravity="center"
            android:inputType="text" />
        <ImageView
            android:id="@+id/imageViewiconregister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            app:srcCompat="@drawable/checkicon50" />



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="15sp"
            android:gravity="center_horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvpop1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:hint="@string/popDetailsTypeinvoice"
                android:gravity="center"
                android:inputType="textMultiLine" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvpopDetailstypeinvoice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:hint="                    "
                android:gravity="center"
                android:inputType="textMultiLine" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="15sp"
            android:gravity="center_horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvpop2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:hint="@string/popDetailsNumberinvoice"
                android:gravity="center"
                android:inputType="textMultiLine" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvpopDetailsnumberinvoice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:hint="                    "
                android:gravity="center"
                android:inputType="textMultiLine" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="15sp"
            android:gravity="center_horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvpop3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:hint="@string/popDetailspaidvalue"
                android:gravity="center"
                android:inputType="textMultiLine" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvpopDetailspaidValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:hint="                    "
                android:gravity="center"
                android:inputType="textMultiLine" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="15sp"
            android:gravity="center_horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvpop4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:hint="@string/popDetailsbalance"
                android:gravity="center"
                android:inputType="textMultiLine" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvpopdetailsBalance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:hint="                    "
                android:gravity="center"
                android:inputType="textMultiLine" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/pop_details_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                android:text="@string/submittext" />
        </LinearLayout>

    </LinearLayout>





</RelativeLayout>