<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PopCancelPayment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">



        <LinearLayout
            android:layout_width="300sp"
            android:layout_height="300sp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewiconregister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="center"
                app:srcCompat="@drawable/avisopop" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/popCancelPaymenttext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:hint="@string/popCancelPaymenttext"
                android:gravity="center"
                android:inputType="textMultiLine" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="15sp"
                android:gravity="center_horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/popCancelPaymenttext2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:hint="@string/popCancelPaymenttext2"
                    android:gravity="center"
                    android:inputType="textMultiLine" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvpopCancelPaymentBalance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:hint="                    "
                    android:gravity="center"
                    android:inputType="textMultiLine" />

            </LinearLayout>





            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginRight="15sp"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/imageViewiconDeposit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="center"
                        app:srcCompat="@drawable/iconsdeposit40" />

                    <Button
                        android:id="@+id/popCancelPay_submitDeposit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/black"
                        android:textColor="@color/white"
                        android:text="@string/deposit" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/imageViewiconCancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="center"
                        app:srcCompat="@drawable/iconcancel40" />

                    <Button
                        android:id="@+id/popCancelPay_submitCancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/black"
                        android:textColor="@color/white"
                        android:text="@string/cancel" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>



    </LinearLayout>


</RelativeLayout>